opam-version: "2.0"
name: "satysfi-railway-doc"
version: "1.0.0"
synopsis: "Document of A Great SATySFi Package"
description: """
Brilliant description comes here.
"""
maintainer: "Your name <email@example.com>"
authors: "Your name <email@example.com>"
license: "MIT" # Choose what you want
homepage: "https://github.com/<github-username>/satysfi-railway"
dev-repo: "git+https://github.com/<github-username>/satysfi-railway.git"
bug-reports: "https://github.com/<github-username>/satysfi-railway/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }
  "satysfi-dist"

  # You may want to include the corresponding library
  "satysfi-railway" {= "%{version}%"}
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "railway-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "railway-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
