opam-version: "2.0"
name: "satysfi-railway"
version: "1.0.0"
synopsis: "A Great SATySFi Package"
description: """
Brilliant description comes here.
"""
maintainer: "Your name <email@example.com>"
authors: "Your name <email@example.com>"
license: "MIT"
homepage: "https://github.com/<github-username>/satysfi-railway"
dev-repo: "git+https://github.com/<github-username>/satysfi-railway.git"
bug-reports: "https://github.com/<github-username>/satysfi-railway/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "railway"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
