opam-version: "2.0"
name: "satysfi-railway"
version: "0.1.0"
synopsis: "Drawing library for SATySFi"
description: """
Drawing library for SATySFi.
"""
maintainer: "Shinichi Mogami <mogassy@yahoo.co.jp>"
authors: "Shinichi Mogami <mogassy@yahoo.co.jp>"
license: "MIT"
homepage: "https://github.com/monaqa/satysfi-railway"
dev-repo: "git+https://github.com/monaqa/satysfi-railway.git"
bug-reports: "https://github.com/monaqa/satysfi-railway/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "railway"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
